@@ -2,6 +2,7 @@
 This file shows the changes in recent releases of MODX. The most current release is usually the
 development release, and is only shown to give an idea of what's currently in the pipeline.
 
+- Fix modSessionHandler->write() cache flag if cache_db_session is not enabled
 - Update xPDO to v2.1.4-pl for cache_db bug fixes and improvements
 - [#4832] Fix issue with moving resource parent to root
 - [#4827] Make sure editing a file sends the working context along
